--- a/site/Index.html
+++ b/site/Index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Dear Austin,</title>
 </head>
 <body>
-<h1>Hello Coursera! Its a great day!</h1>
+<h1 style="color: red; font-size: 100px; text-align: center;">I love you!</h1>
+<h2 style="color: blue; font-size: 60px; text-align: center;">You are the best thing that has happend to me. :)</h2>
+<p style="color: purple; font-size: 30px; text-align: right;">I know this whole thing is still new for the both of us but I believe that we are getting the hang of it.  We are figuring this out together and it is at a place I would gladly let it stay for a while, if you know what I mean. ;)</p>
+<p style="color: orange; font-size: 20px;">Also complete random side note this whole coding thing is really fun and honestly enjoyed learning this little bit so far, after messing up once.  I honestly can't believe I know how to change colors, font sizes and alignment already.</p>
+<footer>
+	<hr>
+	<p style="color: green; font-size: 10px; text-align: center;
+	" onclick="alert('I LOVE YOU');">I still love you and always will.<3</p>
+</footer>
 </body>
 </html>
